Fixed the problem whichj caused the tenants list title to seem uneven with the edit button.

--- a/VividTracker/ClientApp/src/components/TenantsComponent/Styles/TenantsStyles.css
+++ b/VividTracker/ClientApp/src/components/TenantsComponent/Styles/TenantsStyles.css
@@ -18,8 +18,7 @@
 }
 .tenantsListHeader{
     margin-left: 2.5rem;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
+    padding-top: 0.55rem;
     font-weight: 700;
     font-size: 24px;
 }
